cluster/manifests/vault/overlays/dev/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: vault
  labels:
    name: vault
    pod-security.kubernetes.io/enforce: restricted
