cluster/manifests/vault/overlays/dev/peer_authentication.yaml
apiVersion: security.istio.io/v1beta1
kind: PeerAuthentication
metadata:
  name: vault
spec:
  selector:
    matchLabels:
      app.kubernetes.io/name: vault
  mtls:
    mode: STRICT
