cluster/manifests/vault/overlays/dev/sidecar.yaml
apiVersion: networking.istio.io/v1beta1
kind: Sidecar
metadata:
  name: vault
spec:
  workloadSelector:
    labels:
      app.kubernetes.io/name: vault
  outboundTrafficPolicy:
    mode: REGISTRY_ONLY
  egress:
    - captureMode: DEFAULT
      hosts:
        - istio-system/istiod.istio-system.svc.cluster.local
        - otel/otel-agent.otel.svc.cluster.local
        - default/kubernetes.default.svc.cluster.local
        - default/etcd.default.svc.cluster.local
